@@ -57,8 +57,20 @@ $infreeze = FALSE;
 
 logmsg(LOG_NOTICE, "Balloon notifications started [DOMjudge/".DOMJUDGE_VERSION."]");
 
+// Tick use required as of PHP 4.3.0 for handling signals, must be
+// declared globally.
+declare(ticks = 1);
+$exitsignalled = FALSE;
+initsignals();
+
 // Constantly check database for new correct submissions
 while ( TRUE ) {
+
+	// Check whether we have received an exit signal
+	if ( $exitsignalled ) {
+		logmsg(LOG_NOTICE, "Received signal, exiting.");
+		exit;
+	}
 
 	$newcdata = getCurContest(TRUE);
 	$newcid = $newcdata['cid'];
